# c2pa_view

./: .gitignore  AI.md  CHANGELOG.md  LICENSE  MODERNIZATION_PLAN.md  README.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
assets/c2pa/: actions.dsv  assertions.dsv  ingredient_media_types.dsv  link_predicates.dsv
c2pa_viewer_new/: CHANGELOG.md  README.md  pubspec.yaml
c2pa_viewer_new/example/: pubspec.yaml
c2pa_viewer_new/lib/: c2pa_manifest_viewer.dart
c2pa_viewer_new/test/: c2pa_manifest_viewer_test.dart
example/: .gitignore  README.md  pubspec.yaml
example/assets/: c2pa_test_data.dsv
example/integration_test/: c2pa_entities_test.dart  c2pa_rust_test.dart  c2pa_test.dart  manifest_test.dart  simple_test.dart  test_runner.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/test/: smoke_test.dart  widget_test.dart
example/web/: index.html  manifest.json
ios/: c2pa_view.podspec
lib/: api.dart  c2pa_view.dart
lib/widget/: actions_list_widget.dart  assertions_list_widget.dart  c2pa_view.dart  content_credentials_widget.dart  ingredients_list_widget.dart  signature_info_widget.dart
linux/: CMakeLists.txt
macos/: c2pa_view.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: c2pa.rs  mod.rs
rust/tests/: validate_evidence.rs
scripts/: sync_web_pkg.sh
test/: entities_test.dart  mappers_test.dart
testfiles_app/: README.md  pubspec.yaml
testfiles_app/assets/: c2pa_test_data.dsv
testfiles_app/integration_test/: manifest_parsing_test.dart  (+3 more)
windows/: CMakeLists.txt
(+98 files in other folders)
