[package]
name = "c2pa_view"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
c2pa = {git = "ssh://git@github.com/NorthGuard/c2pa-rs.git", branch = "main", features = ["file_io", "rust_native_crypto"] }
flutter_rust_bridge = "=2.9.0"
mime_guess = "2.0.5"
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
