[package]
name = "c2pa_view"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
c2pa = { path = "../../../forks/c2pa-rs/sdk", features = ["file_io", "rust_native_crypto"] }
flutter_rust_bridge = "=2.12.0"
mime_guess = "2.0.5"
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
